Opened 12 years ago

Closed 12 years ago

#3779 closed defect (fixed)

speex "Unable to parse option value "(null)" as sample format"

Reported by: ghazel Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:

FLV with speex audio fails to transcode to MKV with MP3 audio. (FLVs with nellymoser convert fine, as does stripping the audio track.)

How to reproduce:

$ ffmpeg -y -i example.flv -vcodec h264 -acodec mp3 example.mkv
ffmpeg version 2.2.4 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun 29 2014 20:15:27 with Apple LLVM version 6.0 (clang-600.0.34.4) (based on LLVM 3.5svn)
  configuration: --prefix=/usr/local/Cellar/ffmpeg/2.2.4 --enable-shared --enable-pthreads --enable-gpl --enable-version3 --enable-nonfree --enable-hardcoded-tables --enable-avresample --enable-vda --cc=clang --host-cflags= --host-ldflags= --enable-libx264 --enable-libfaac --enable-libmp3lame --enable-libxvid
  libavutil      52. 66.100 / 52. 66.100
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 33.100 / 55. 33.100
  libavdevice    55. 10.100 / 55. 10.100
  libavfilter     4.  2.100 /  4.  2.100
  libavresample   1.  2.  0 /  1.  2.  0
  libswscale      2.  5.102 /  2.  5.102
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
[flv @ 0x7ff50c817000] negative cts, previous timestamps might be wrong
    Last message repeated 40 times
Input #0, flv, from 'example.flv':
  Duration: 02:25:42.42, start: 0.000000, bitrate: 653 kb/s
    Stream #0:0: Video: h264 (Main), yuv420p(tv), 800x600 [SAR 1:1 DAR 4:3], 30.33 fps, 30 tbr, 1k tbn, 60 tbc
    Stream #0:1: Audio: speex, 16000 Hz, mono
[abuffer @ 0x7ff50b603be0] Unable to parse option value "(null)" as sample format
    Last message repeated 1 times
[abuffer @ 0x7ff50b603be0] Error setting option sample_fmt to value (null).
[graph 1 input from stream 0:1 @ 0x7ff50b603ce0] Error applying options to the filter.
Error opening filters!
Conversion failed!

Change History (6)

comment:1 by Timothy Gu, 12 years ago

Version: 2.2.4git-master

You should use -acodec libmp3lame because we don't have an encoder mp3, but this is a bug nevertheless.

comment:2 by ghazel, 12 years ago

Ah. It seems to guess and use libmp3lame anyway, but I'll start using libmp3lame explicitly.

comment:3 by Carl Eugen Hoyos, 12 years ago

I believe that you are only missing --enable-libspeex. Iirc this is a duplicate a a recently opened ticket.

comment:4 by ghazel, 12 years ago

Recompiling with --with-speex (I used homebrew, so it was "brew install ffmpeg --with-speex") worked great. Thank you!

A more helpful error message would have kept me off the bug tracker.

Last edited 12 years ago by ghazel (previous) (diff)

in reply to:  3 comment:5 by Carl Eugen Hoyos, 12 years ago

Replying to cehoyos:

Iirc this is a duplicate a a recently opened ticket.

I was thinking about ticket #3662 but this is probably different.

A patch was sent:
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/180162

comment:6 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavfilter
Reproduced by developer: set
Resolution: fixed
Status: newclosed

Fixed by Nicolas in 91244073

Note: See TracTickets for help on using tickets.