ffmpeg_filter: refuse to configure input without a decoder.

The decoder is necessary in order to filter frames.
This makes the error message clearer in this case:
currently, it will usually fail because the pixel or sample
format is not defined and is converted into "(null)"
(non-portable).

Enhance trac ticket #3779.
(cherry picked from commit 91244073fd8b983e7cd1f97da83daf956fbbddc6)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>